# logging-facade

./: .ghci  .gitignore  .travis.yml  LICENSE  README.md  logging-facade.cabal  logging.cabal  package.yaml
logging-facade-hslogger/: logging-facade-hslogger.cabal
logging-facade-hslogger/src/System/Logging/Facade/: HsLogger.hs
logging-hslogger/: logging-hslogger.cabal
logging-hslogger/src/Logging/: HsLogger.hs
src/: DynamicSpec.hs  Logging.hs  Util.hs
src/Logging/: Maybe.hs  Type.hs
src/System/Logging/: Facade.hs
src/System/Logging/Facade/: Class.hs  Sink.hs  TH.hs  Types.hs
test/: Helper.hs  Main.hs  MaybeSpec.hs  Spec.hs  run.sh
test/System/Logging/: FacadeSpec.hs
test/System/Logging/Facade/: SinkSpec.hs
tests/: DynamicSpecTest.hs  Main.hs
