name:             logging-facade
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2014 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10

library
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
      System.Logging.Facade
      System.Logging.Facade.Sink
      System.Logging.Facade.TH
      System.Logging.Facade.Class
      System.Logging.Facade.Types
  build-depends:
      base == 4.*
    , transformers
    , template-haskell
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base == 4.*
    , logging-facade
    , hspec == 2.*
  default-language: Haskell2010
