name:             logging
version:          0.0.0
stability:        experimental
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011 Simon Hengel
author:           Simon Hengel
maintainer:       simon.hengel@wiktory.org
build-type:       Simple
cabal-version:    >= 1.6

library
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
      Logging
  other-modules:
      DynamicSpec
      Util
  build-depends:
      base       >= 4.0  && < 4.4
    , template-haskell
    , text
