name:             logging-hslogger
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011 Simon Hengel
author:           Simon Hengel
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.6

library
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends:
      base
    , logging
    , hslogger
  exposed-modules:
      Logging.HsLogger
